# demo_django_ajax_CRUD

./: README.md  docker-compose.yaml  makefile  pyproject.toml
config/config/: settings.py  urls.py
config/templates/: base.html
config/todo_crud_app/: models.py  urls.py  views.py
config/todo_crud_app/migrations/: 0001_initial.py
config/todo_crud_app/templates/todo_crud_app/: task_ajax.html  task_list.html
static/: main.js
todo_app/: Dockerfile  entrypoint.sh  pyproject.toml
todo_app/config/: settings.py  urls.py
todo_app/static/: main.js
todo_app/templates/: base.html
todo_app/todo_crud_app/: apps.py  models.py  urls.py  views.py
todo_app/todo_crud_app/migrations/: 0002_rename_complited_task_completed.py
todo_app/todo_crud_app/templates/todo_crud_app/: task_ajax.html
